src/client/components/app-core/variables.css
:root {
  /* COLORS */
  --brand-yellow: #ffe400;
  --active-yellow: #e9d100;
  --html-blue: blue;
  --active-blue: #0005be;
  --bg-pastel: #fffeca;
  --paper: #fffed9;
  --black: #222222;
  --off-black: #555555;
  --dim: #888888;
  --very-dim: #cccccc;
  --fog: #f6f6f6;
  --white: #ffffff;
  --soft-red: #ff3e3e;

  /* FONTS */
  --font-sans: 'apercu', Arial, sans-serif;

  /* SPACING */
  --spacing-tiny: 5px;
  --spacing-smaller: 10px;
  --spacing-small: 15px;
  --spacing-medium: 25px;
  --spacing-large: 35px;
  --spacing-larger: 55px;
  --spacing-big: 75px;
  --spacing-bigger: 110px;
  --spacing-huge: 150px;

  /* COMPONENTS */
  --app-header-height-small: 3.125rem; /* 50px */
  --app-header-height-large: 4.0625rem; /* 65px */

  /* Z-INDEXES */
  --z-index-high: 2;
  --z-index-low: 1;

  /* GRID */
  --grid-column-small: 25px;
  --grid-column-medium: 30px;
  --grid-column-large: 35px;
  --grid-gutter-large: 20px;
  --grid-margin: 20px;
  --grid-page-start: 1;
  --grid-content-start: 2;
  --grid-center: 26;
  --grid-content-end: 50;
  --grid-page-end: 51;
  --grid-page: var(--grid-page-start) / var(--grid-page-end);
  --grid-page-left: var(--grid-page-start) / var(--grid-center);
  --grid-page-right: var(--grid-center) / var(--grid-page-end);
  --grid-content: var(--grid-content-start) / var(--grid-content-end);
  --grid-content-left: var(--grid-content-start) / var(--grid-center);
  --grid-content-right: var(--grid-center) / var(--grid-content-end);
}

